--- a/templates/city-not-found.html
+++ b/templates/city-not-found.html
@@ -1,15 +1,16 @@
-<!-- Homepage of the webapp--> 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Weather Conditions</title>
+    <title>City Not Found</title>
     <!-- Link to the styles sheeet-->
     <link href = "{{url_for('static', filename = 'styles/style.css')}}" rel = "stylesheet" />
 </head>
 <body>
-    <h1>Get Weather Conditions</h1>
+    <h1>City Not Found</h1>
+    <h2> Try Again? </h2>
     <form action = "/weather">
         <input type =" text" name ="city" id ="city"
         placeholder = "Enter a City" />
