--- a/templates/weather.html
+++ b/templates/weather.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} Weather</title>
-    <link href = "{{ url_for('static', filename = 'styles/style.css')}}" rel = "stylesheet"/> <!-- Link to the stylesheet-->
+    <title>{{ title}} Weather </title>
+    <!-- Link to the styles sheeet-->
+    <link href = "{{url_for('static', filename = 'styles/style.css')}}" rel = "stylesheet" />
 </head>
 <body>
-    <h1>{{ title }} Weather</h1>
-    <p>{{ status }} and {{ temp }} &deg; </p> <!-- temperature in degrees-->
-    <p>Feels Like {{ feels_like }} &deg; </p> 
-    <form "action" = "/weather">
-        <input type ="text", name ="city", id ="city"
+    <h1>{{ title}} Weather </h1>
+    <p>{{ status}} and {{ temp }} &deg; </p>
+    <p>Feels like {{ feels_like }} &deg; </p>
+
+    <!-- Submit the data to the weather route-->
+    <form action = "/weather">   
+        <input type =" text" name ="city" id ="city"
         placeholder = "Enter a City" />
-        <button type = "submit">Submit</button>
-    </form>
-    
+        <button type = "submit"> Submit </button>
+    </form>    
 </body>
 </html>
